src/parser/Compilador.jj
PARSER_BEGIN(Compilador)
package  parser;

import simbolos.TablaDeSimbolos;
import simbolos.Variable;
import tiposDeDatos.TiposDeDatos;
import tiposDeDatos.Valor;

import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.InputStream;
import java.io.IOException;


class Compilador{

    public static TablaDeSimbolos tablaDeSimbolos;

        public static void main(String[] args) throws ParseException, FileNotFoundException, IOException, InterruptedException
        {
            tablaDeSimbolos = new TablaDeSimbolos();


            InputStream fis;

            if (System.in.available() > 0){
                fis = System.in;
            } else {
                fis = new FileInputStream("src/archivosDeEntrada/prueba.txt");
            }

            try
            {
                Compilador compilador=new Compilador(fis);
                compilador.analizadorSintactico();
            }
            catch(ParseException e)
            {
                System.out.println(e.getMessage());
            }
            catch(Error e)
            {
              e.printStackTrace();
              Thread.sleep(100);
            }
            System.out.println("\nTabla de simbolos");
            tablaDeSimbolos.print();
        }

}

PARSER_END(Compilador)
/* Ignorados */
SKIP: {" " | "\t" | "\r" | "\n" }

/* Palabras Reservadas */
TOKEN :
{
< MODIFICADOR: "private" | "public" >
| < CLASE: "class" >
| < TIPO: "boolean" | "int"  | "double" | "string">
| < VOID: "void">
| < SI: "if" >
| < MIENTTRAS: "while" >
}

/* Separadores */
TOKEN :
{
  < PARENTESIS_IZQ: "(" >
| < PARENTESIS_DER: ")" >
| < CORCHETE_IZQ: "{" >
| < CORCHETE_DER: "}" >
| < PUNTO_Y_COMA: ";" >
| < COMA: "," >
| < PUNTO: ".">
}


/* Operadores */
TOKEN :
{
< NEGACION: "-" >
| < OPERADOR: <OPERADOR_LOGICO> | <OPERADOR_ARITMETICO> >
| < ASIGNACION: "=" >
| < OPERADOR_LOGICO: ">" | "<" | "==" | "<=" | ">=" | "!=" | "&&" | "||">
| < OPERADOR_ARITMETICO: <NEGACION>|"+"|"*"|"/" >
}

/* Literales */
TOKEN:
{
< LITERAL: <LITERAL_DOBLE> | <LITERAL_CADENA> | <LITERAL_ENTERA> | <LITERAL_BOOLEANA> >
|< LITERAL_ENTERA: ["0"-"9"](["0"-"9"])* >
|< LITERAL_BOOLEANA: "false" | "true" >
|< LITERAL_CADENA: ("\"" (~["\""])* "\"") >
|< LITERAL_DOBLE: <LITERAL_ENTERA> <PUNTO> <LITERAL_ENTERA> >
}

/* simbolos.Identificador */
TOKEN:
{
	< IDENTIFICADOR:["a"-"z","A"-"Z","_"](["a"-"z","A"-"Z","_","-","0"-"9"])* >
}


//------------ EMPIEZA ANALIZADOR SINTACTICO -------------------

void analizadorSintactico():{}{
	try{
		<MODIFICADOR> <CLASE> <IDENTIFICADOR> <CORCHETE_IZQ> (AS_expresion())* <CORCHETE_DER>
	}catch(ParseException e){
		System.out.println(e.toString());
	}

}

void AS_declaracion_de_variable():{
    Token token = null;
    Token tokenTipoDatos = null;
    Token tokenAlcance = null;
    Variable variable;
}{
    tokenAlcance = <MODIFICADOR>
	tokenTipoDatos  = <TIPO>
	token           = <IDENTIFICADOR>
    {
        variable = new Variable(token,tokenTipoDatos,tokenAlcance);
        tablaDeSimbolos.agregarIdentificador(variable);
    }
	[AS_asignacion()]
}

void AS_asignacion():{}{
    <ASIGNACION> AS_expresion_matematica()
}

void AS_expresion_asignacion():{}{
    <IDENTIFICADOR> AS_asignacion()
}

void AS_valor():{}{
     <IDENTIFICADOR> | <LITERAL>
}



//INICIA OPERACIOONES MATEMATICAS

void AS_expresion_matematica():{}{
    AS_Operador() (<OPERADOR> AS_Operador())*
}

void AS_Operador():{}{
    AS_valor() | <PARENTESIS_IZQ> AS_expresion_matematica() <PARENTESIS_DER> | <NEGACION> AS_Operador()
}

//TERMINA OPERACIONES MATEMATICAS

void AS_expresion():{}{
	(( AS_expresion_asignacion() | AS_declaracion_de_variable() ) <PUNTO_Y_COMA>) | AS_expresiones_bloque()
}

void AS_expresiones_bloque():{}{
    AS_expresion_si() | AS_expresion_mientras()
}

void AS_expresion_si():{}{
	<SI> <PARENTESIS_IZQ> AS_expresion_matematica() <PARENTESIS_DER> AS_bloque()
}

void AS_expresion_mientras():{}{
	<MIENTTRAS> <PARENTESIS_IZQ> AS_expresion_matematica() <PARENTESIS_DER> AS_bloque()
}

void AS_bloque():{}{
    <CORCHETE_IZQ> (AS_expresion())* <CORCHETE_DER>
}


//------------  TERMINA ANALIZADOR SINTACTICO -------------------


// ------------  EMPIEZA ANALIZADOR SEMANTICO-------------------
